{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 56,
  "lineage": "9ece03dd-893d-181b-ff09-446f4ab60323",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "webserver_nic_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.11",
            "association_id": "eipassoc-0d4d3a1d9ef004f41",
            "domain": "vpc",
            "id": "eipalloc-099eda1a2c92c8256",
            "instance": "i-04288998e26ade26c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bba6401fa7389721",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-34-199-116-212.compute-1.amazonaws.com",
            "public_ip": "34.199.116.212",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.company_public_gateway",
            "aws_network_interface.office_webserver_nic",
            "aws_security_group.allow_web_traffic",
            "aws_subnet.office_subnet_pcs",
            "aws_vpc.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:664774184576:instance/i-04288998e26ade26c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04288998e26ade26c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "rootkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0bba6401fa7389721"
              }
            ],
            "primary_network_interface_id": "eni-0bba6401fa7389721",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_ip": "10.0.1.11",
            "public_ip": "34.199.116.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f62e38d0f7fca38e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0464c862b615f822b",
            "tags": {
              "Name": "Webserver1"
            },
            "tags_all": {
              "Name": "Webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047db897ce717a067"
            ]
          },
          "dependencies": [
            "aws_network_interface.office_webserver_nic",
            "aws_security_group.allow_web_traffic",
            "aws_subnet.office_subnet_pcs",
            "aws_vpc.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "company_public_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664774184576:internet-gateway/igw-090cbefb785e0cba4",
            "id": "igw-090cbefb785e0cba4",
            "owner_id": "664774184576",
            "tags": {
              "Name": "CompanyPublicGateway"
            },
            "tags_all": {
              "Name": "CompanyPublicGateway"
            },
            "vpc_id": "vpc-0bccd6aca6f18e4a3"
          },
          "dependencies": [
            "aws_vpc.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "office_webserver_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-017cec786640a8f98",
                "device_index": 0,
                "instance": "i-04288998e26ade26c"
              }
            ],
            "id": "eni-0bba6401fa7389721",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "0e:d3:fa:e7:5d:e1",
            "private_ip": "10.0.1.11",
            "private_ips": [
              "10.0.1.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-047db897ce717a067"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0464c862b615f822b"
          },
          "dependencies": [
            "aws_security_group.allow_web_traffic",
            "aws_subnet.office_subnet_pcs",
            "aws_vpc.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "company_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664774184576:route-table/rtb-085f369ad4416d8bc",
            "id": "rtb-085f369ad4416d8bc",
            "owner_id": "664774184576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090cbefb785e0cba4",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.1.0/24",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090cbefb785e0cba4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CompanyRouteTable"
            },
            "tags_all": {
              "Name": "CompanyRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bccd6aca6f18e4a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.company_public_gateway",
            "aws_vpc.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "officesubnet_routetable_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061bf4dc5875e04bc",
            "route_table_id": "rtb-085f369ad4416d8bc",
            "subnet_id": "subnet-0464c862b615f822b"
          },
          "dependencies": [
            "aws_internet_gateway.company_public_gateway",
            "aws_route_table.company_route_table",
            "aws_subnet.office_subnet_pcs",
            "aws_vpc.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664774184576:security-group/sg-047db897ce717a067",
            "description": "Allow web traffic for ssh http and tls",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047db897ce717a067",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "664774184576",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Allow_Web-HTTPS_HTTP_SSH"
            },
            "tags_all": {
              "Name": "Allow_Web-HTTPS_HTTP_SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bccd6aca6f18e4a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "office_subnet_pcs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664774184576:subnet/subnet-0464c862b615f822b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-0464c862b615f822b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664774184576",
            "tags": {
              "Name": "OfficeSubNetPCS"
            },
            "tags_all": {
              "Name": "OfficeSubNetPCS"
            },
            "vpc_id": "vpc-0bccd6aca6f18e4a3"
          },
          "dependencies": [
            "aws_vpc.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "office_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:664774184576:vpc/vpc-0bccd6aca6f18e4a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.1.0/28",
            "default_network_acl_id": "acl-0bd840a367288183d",
            "default_route_table_id": "rtb-036441cb6564511ce",
            "default_security_group_id": "sg-0e4c856245cff3c7f",
            "dhcp_options_id": "dopt-e154f199",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bccd6aca6f18e4a3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-036441cb6564511ce",
            "owner_id": "664774184576",
            "tags": {
              "Name": "OfficeNetwork"
            },
            "tags_all": {
              "Name": "OfficeNetwork"
            }
          }
        }
      ]
    }
  ]
}